--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "react-router-route-config",
   "version": "0.6.7",
   "description": "User `route-config` with `react-router`",
+  "repository": "github:go-aos/react-router-route-config",
+  "bugs": "https://github.com/go-aos/react-router-route-config/issues",
   "main": "lib/react-router-route-config.js",
   "module": "es/react-router-route-config.js",
   "files": [
@@ -28,15 +30,11 @@
     "route",
     "config"
   ],
-  "repository": "github:go-aos/react-router-route-config",
   "authors": [
     "Stephane Barale <stephane.barale@go-aos.io> (https://github.com/C0r3y8)",
     "AOS"
   ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/go-aos/react-router-route-config/issues"
-  },
   "dependencies": {
     "prop-types": "^15.6.1"
   },
