--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-router-route-config",
-  "version": "0.7.1",
+  "version": "1.0.0",
   "description": "User `route-config` with `react-router`",
   "repository": "github:go-aos/react-router-route-config",
   "bugs": "https://github.com/go-aos/react-router-route-config/issues",
   "main": "lib/react-router-route-config.js",
   "module": "es/react-router-route-config.js",
+  "unpkg": "dist/react-router-route-config.js",
   "files": [
     "dist",
     "lib",
@@ -13,15 +14,11 @@
     "src"
   ],
   "scripts": {
-    "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/react-router-route-config.js",
-    "build:es": "cross-env BABEL_ENV=es NODE_ENV=es rollup -c -o es/react-router-route-config.js",
-    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -o dist/react-router-route-config.js",
-    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -o dist/react-router-route-config.min.js",
-    "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "build": "rollup -c",
     "clean": "rimraf lib dist es",
     "lint": "BABEL_ENV=es NODE_ENV=development jest",
     "prepare": "npm run clean && npm test && npm run build",
-    "test": "cross-env BABEL_ENV=commonjs jest",
+    "test": "jest",
     "test:watch": "npm test -- --watch"
   },
   "keywords": [
@@ -39,34 +36,38 @@
     "prop-types": "^15.6.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "cross-env": "^5.1.4",
-    "eslint": "^4.17.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "jest": "^22.4.2",
-    "jest-runner-eslint": "^0.4.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.3.1",
+    "eslint": "^5.11.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
+    "jest-runner-eslint": "^0.7.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.7.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.56.0",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.0.3",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup": "^0.67.3",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^3.0.0",
     "route-config": "^0.10.2"
   },
   "peerDependencies": {
